# gramine-pf-test

./: CMakeLists.txt  README.md
include/: encrypt.h
src/: encrypt.cpp  main.cpp
